# adk_agent

./: .gitignore  README.md
a2a/: README.md  (+3 more)
adk/: README.md  adk_tutorial.ipynb  agent_engine_adk.ipynb  pyproject.toml
adk-web/: pyproject.toml
adk-web/01-agent/: runner_main.py  runtime_main.py
adk-web/01-agent/2-search/: agent.py
adk-web/01-agent/3-cmd/: agent.py  runner.py
adk-web/01-agent/4-runtime/: agent.py
adk-web/01-agent/basic/: agent.py
adk-web/01-agent/runtime/: agent.py  runner.py  sub_agent.py
adk-web/02-conversations/: agent_session.db
adk-web/02-conversations/event/: agent.py  instruction.py  runner.py
adk-web/02-conversations/memory/: agent.py  main.py  runner_in_memory.py
adk-web/02-conversations/session/: instruction.py  runner_database.py  runner_in_memory.py  runner_vertexai.py
adk-web/02-conversations/state/: agent.py  output_key.py  state_change.py
adk-web/04-workflow/parallel/: agent.py
adk-web/04-workflow/sequencial/: agent.py  sub_agent.py
adk/01-agent/: README.md
adk/02-conversations/: README.md  agent_session.db
adk/03-tools/: README.md
adk/04-workflow/: README.md
adk/05-callback/: README.md
adk/06-deploy/: README.md
adk/08-output/: README.md
adk/09-evaluate/: README.md
adk/agent/: adk_agent_engine.ipynb  adk_basic.ipynb
adk/callback/: adk_agent_lifecycle_callback.ipynb
adk/session/: adk_session.ipynb  adk_state.ipynb
adk/session_memory/: adk_session.ipynb
adk/tools/: adk_function_tool.ipynb  adk_mcp.ipynb  adk_mcp_client.ipynb  adk_mcp_server.ipynb
adk/workflow/: adk_parallel_agent.ipynb
(+107 files in other folders)
